@@ -13,8 +13,9 @@ l1 = Fermion(i1, v1).addArrow()
 l2 = Fermion(v1, i2).addArrow()
 l1 = Fermion(o1, v2).addArrow()
 l2 = Fermion(v2, o2).addArrow()
-g1 = Graviton(v1, v2).bend(1.5).set3D()
+g1 = Gluino(v1, v2).bend(1.5).set3D()
 g2 = Gaugino(v1, v2).bend(-1.5).set3D()
+g3 = Graviton(midpoint(v2,o2), midpoint(v2,o1)).bend(1.0).set3D()
 g1.setStyles([color.rgb.red])
 
 lab = Label("A silly SUSY / graviton demo", x=0, y=2.2)
