@@ -1,3 +1,8 @@
+2007-05-17  Georg von Hippel <gmv22@cantab.net>
+
+	* Updated FeynML schema to reflect recent changes to FeynML module.
+	* Added Gluino line class.
+
 2007-05-16  Georg von Hippel <gmv22@cantab.net>
 
 	* Added support for further styling (arrows, labels) to FeynML module.
